--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/themosis/theme#readme",
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "gulp-sass": "^4.1.0",
     "laravel-mix": "^4.0.0",
     "resolve-url-loader": "2.3.1",
     "sass": "^1.17.3",
